k8s/base/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: web
      app.kubernetes.io/name: web
  template:
    spec:
      containers:
      - image: superjugger88/nextjs
        imagePullPolicy: IfNotPresent
        name: web
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        securityContext:
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
      securityContext:
        fsGroup: 1000
      serviceAccountName: web
  revisionHistoryLimit: 0
