k8s/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: web
    app.kubernetes.io/name: web
  type: ClusterIP
